--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Campus Buys</title>
-  <link rel="icon" type="image/png" href="NG.png">
+  <link rel="icon" type="image/png" href="EK.png">
   <style>
     /* === General Page Setup === */
     body {
@@ -194,7 +194,7 @@
 <body>
 
   <div class="logo-box">
-    <img src="NEXTGEN DEALS.png" alt="Logo" class="logo">
+    <img src="EK.png" alt="Logo" class="logo">
     <div class="bottom-glow"></div>
     <div class="left-glow"></div>
   </div>
@@ -219,6 +219,7 @@
 
 </body>
 </html>
+
 
 
 
