--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NextGen Deals</title>
+  <title>Campus Buys</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -103,4 +103,5 @@
   </div>
 
 </body>
+
 </html>
