--- a/products.html
+++ b/products.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image" href="NG.png">
+    <link rel="icon" type="image" href="EK.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NextGen Deals</title>
+    <title>Campus Buys</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <!-- Logo + Title -->
     <header id="site-header">
         <img src="NEXTGEN DEALS.png" alt="Logo" class="logo" style="border-radius: 10px;">
-        <h1>NG Deals</h1>
+        <h1>Campus Buys</h1>
     </header>
 
     <!-- Shop Now Button -->
@@ -54,6 +54,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
