--- a/index.html
+++ b/index.html
@@ -126,6 +126,11 @@
     }
 
     /* Mobile */
+      .row {
+    gap: 10px;
+    margin: 0 auto;
+    padding-top: 15px;  /* smaller bottom padding on mobile */
+  }
     @media (max-width: 600px) {
       .brand {
         padding: 12px;
@@ -228,6 +233,7 @@
 
 </body>
 </html>
+
 
 
 
