--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=430, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Shop Hub</title>
   <style>
-    /* ==== BASE STYLING ==== */
     body {
       margin: 0;
       padding: 20px;
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -18,7 +17,6 @@
       font-family: 'Poppins', sans-serif;
       color: #fff;
       box-sizing: border-box;
-      overflow-x: hidden;
     }
 
     h1 {
@@ -26,83 +24,144 @@
       color: #00e6e6;
       text-shadow: 0 0 15px #00e6e6;
       text-align: center;
-      font-size: 32px;
-      letter-spacing: 1px;
+      font-size: 2rem;
     }
 
-    /* ==== SHOP NOW BUTTON ==== */
-    .shop-now {
-      background: linear-gradient(90deg, #00c6ff, #0072ff);
-      color: white;
-      padding: 16px 50px;
-      font-size: 22px;
-      border: none;
-      border-radius: 40px;
-      cursor: pointer;
-      box-shadow: 0 0 25px rgba(0, 114, 255, 0.8);
-      transition: all 0.3s ease;
-      margin: 25px 0;
-    }
-
-    .shop-now:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 35px rgba(0, 198, 255, 1);
-    }
-
-    /* ==== GRID ==== */
     .row {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 18px;
+      grid-template-columns: repeat(3, 1fr); /* always 3 columns */
+      gap: 20px;
       width: 100%;
-      max-width: 420px;
-      margin: 15px auto;
-      padding-top: 10px;
-      justify-items: center;
+      max-width: 1200px;
+      margin: 20px auto;
+      padding-top: 15px;
     }
 
-    /* ==== BRAND BOX ==== */
     .brand {
-      width: 115px;
-      height: 125px;
-      background: rgba(255, 255, 255, 0.08);
+      background: rgba(255, 255, 255, 0.05);
       border: 1px solid rgba(255, 255, 255, 0.2);
-      border-radius: 18px;
+      border-radius: 15px;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       cursor: pointer;
+      padding: 15px;
       transition: all 0.4s ease;
       box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
       text-decoration: none;
     }
 
     .brand:hover {
-      transform: translateY(-5px) scale(1.05);
-      box-shadow: 0 0 20px rgba(0, 255, 255, 0.6);
+      transform: translateY(-8px) scale(1.05);
+      box-shadow: 0 0 25px rgba(0, 255, 255, 0.6);
       background: rgba(255, 255, 255, 0.15);
+      animation: glow 1.5s infinite alternate;
+    }
+
+    @keyframes glow {
+      0% {
+        box-shadow: 0 0 3px #00e6e6;
+      }
+      50% {
+        box-shadow: 0 0 20px #00e6e6;
+      }
+      100% {
+        box-shadow: 0 0 3px #00e6e6;
+      }
     }
 
     .brand img {
-      width: 65px;
-      height: 65px;
-      margin-bottom: 8px;
-      border-radius: 12px;
+      width: 100px;
+      height: 100px;
+      margin-bottom: 10px;
+      border-radius: 10px;
       object-fit: contain;
     }
 
     .brand p {
-      font-size: 15px;
+      font-size: 1.2rem;
       color: #fff;
       text-align: center;
       margin: 0;
     }
 
-    /* ==== DISABLE RESPONSIVE CHANGES ==== */
-    @media (max-width: 430px) {
-      html, body {
-        zoom: 1; /* prevent shrinking */
+    .shop-now {
+      background: linear-gradient(90deg, #00c6ff, #0072ff);
+      color: white;
+      padding: 15px 40px;
+      font-size: 1.4rem;
+      border: none;
+      border-radius: 40px;
+      cursor: pointer;
+      box-shadow: 0 0 20px #0072ff;
+      transition: all 0.3s ease;
+      margin: 25px 0;
+    }
+
+    .shop-now:hover {
+      transform: scale(1.1);
+      box-shadow: 0 0 20px #00c6ff;
+    }
+
+    /* Responsive brand image sizes */
+    @media (max-width: 1440px) {
+      .brand img {
+        width: 90px;
+        height: 90px;
+      }
+      .brand p {
+        font-size: 1.15rem;
+      }
+      .brand {
+        padding: 25px;
+      }
+    }
+
+    @media (max-width: 1024px) {
+      .brand img {
+        width: 85px;
+        height: 85px;
+      }
+      .brand p {
+        font-size: 1.1rem;
+      }
+      .brand {
+        padding: 25px;
+      }
+    }
+
+    @media (max-width: 768px) {
+        .row {
+    gap: 12px;
+    margin: 0 auto;
+    padding-top: 16px;  /* smaller bottom padding on mobile */
+  }
+      .brand img {
+        width: 75px;
+        height: 75px;
+      }
+      .brand p {
+        font-size: 1rem;
+      }
+      .brand {
+        padding: 20px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .brand img {
+        width: 65px;
+        height: 65px;
+      }
+      .brand p {
+        font-size: 0.9rem;
+      }
+      .brand {
+        padding: 12px;
+      }
+      .row {
+        gap: 10px;
       }
     }
   </style>
@@ -110,6 +169,7 @@
 <body>
   <h1>All Your Favorite Stores</h1>
 
+  <!-- Shop Now Button -->
   <button class="shop-now" onclick="openShop()">Shop Now</button>
 
   <!-- First Row -->
@@ -139,7 +199,10 @@
       <p>Ajio</p>
     </a>
     <a class="brand" href="https://www.shopsy.in" target="_blank" rel="noopener noreferrer">
-      <img src="https://play-lh.googleusercontent.com/uGrNBxGla5F9jv0VDAwGZUleaH3C54eaIDY5MaSiChKxseMIvPxlQ7ivm0OEzo9lxxw=w240-h480-rw" alt="Shopsy" />
+      <img
+        src="https://play-lh.googleusercontent.com/uGrNBxGla5F9jv0VDAwGZUleaH3C54eaIDY5MaSiChKxseMIvPxlQ7ivm0OEzo9lxxw=w240-h480-rw"
+        alt="Shopsy"
+      />
       <p>Shopsy</p>
     </a>
   </div>
@@ -188,3 +251,6 @@
   </script>
 </body>
 </html>
+
+
+i will give image like that all devices will be\
