--- a/index.html
+++ b/index.html
@@ -150,19 +150,22 @@
     }
 
     @media (max-width: 480px) {
+.row {
+    gap: 12px;
+    margin: 0 auto;
+    padding-top: 16px;  /* smaller bottom padding on mobile */
+  }
       .brand img {
-        width: 65px;
-        height: 65px;
+        width: 75px;
+        height: 75px;
       }
       .brand p {
-        font-size: 0.9rem;
+        font-size: 1rem;
       }
       .brand {
-        padding: 12px;
+        padding: 20px;
       }
-      .row {
-        gap: 10px;
-      }
+    }
     }
   </style>
 </head>
@@ -251,4 +254,5 @@
   </script>
 </body>
 </html>
+
 
