--- a/index.html
+++ b/index.html
@@ -132,11 +132,6 @@
     }
 
     @media (max-width: 768px) {
-        .row {
-    gap: 12px;
-    margin: 0 auto;
-    padding-top: 16px;  /* smaller bottom padding on mobile */
-  }
       .brand img {
         width: 75px;
         height: 75px;
@@ -150,22 +145,19 @@
     }
 
     @media (max-width: 480px) {
-.row {
-    gap: 12px;
-    margin: 0 auto;
-    padding-top: 16px;  /* smaller bottom padding on mobile */
-  }
       .brand img {
-        width: 65px;
+        width: 75px;
         height: 75px;
       }
       .brand p {
-        font-size: 1rem;
+        font-size: 0.9rem;
       }
       .brand {
-        padding: 20px;
+        padding: 12px;
       }
-    }
+      .row {
+        gap: 10px;
+      }
     }
   </style>
 </head>
@@ -256,4 +248,4 @@
 </html>
 
 
-
+i will give image like that all devices will be\
