--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@
     }
 
     @media (max-width: 768px) {
+      .row { gap: 12px; 
+        margin: 0 auto; 
+        padding-top: 15px; /* smaller bottom padding on mobile */
+      }
       .brand img {
         width: 75px;
         height: 75px;
@@ -145,6 +149,10 @@
     }
 
     @media (max-width: 480px) {
+      .row { gap: 12px; 
+        margin: 0 auto; 
+        padding-top: 15px; /* smaller bottom padding on mobile */
+      
       .brand img {
         width: 75px;
         height: 75px;
@@ -249,3 +257,4 @@
 
 
 i will give image like that all devices will be\
+
