--- a/index.html
+++ b/index.html
@@ -149,19 +149,22 @@
     }
 
     @media (max-width: 480px) {
-     .row { gap: 12px; 
+      .row { gap: 12px; 
         margin: 0 auto; 
         padding-top: 15px; /* smaller bottom padding on mobile */
-      }
+      
       .brand img {
         width: 75px;
         height: 75px;
       }
       .brand p {
-        font-size: 1rem;
+        font-size: 0.9rem;
       }
       .brand {
-        padding: 20px;
+        padding: 12px;
+      }
+      .row {
+        gap: 10px;
       }
     }
   </style>
@@ -251,6 +254,7 @@
   </script>
 </body>
 </html>
+
 
 
 
