--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   </style>
 </head>
 <body>
-  <h1>All Your Favorite Stores</h1>
+  <h1>All Your Favorite <br>Stores</h1>
 
   <!-- Shop Now Button -->
   <button class="shop-now" onclick="openShop()">Shop Now</button>
@@ -254,6 +254,7 @@
   </script>
 </body>
 </html>
+
 
 
 
