--- a/index.html
+++ b/index.html
@@ -161,8 +161,10 @@
         font-size: 1rem;
       }
       .brand {
-        padding: 16px;
+        padding: 20px;
       }
+      .row { 
+        gap: 10px; }
       
     }
   </style>
@@ -252,6 +254,7 @@
   </script>
 </body>
 </html>
+
 
 
 
