--- a/index.html
+++ b/index.html
@@ -149,23 +149,19 @@
     }
 
     @media (max-width: 480px) {
-      .row { gap: 12px; 
-        margin: 0 auto; 
-        padding-top: 15px; /* smaller bottom padding on mobile */
-      
-      .brand img {
-        width: 75px;
-        height: 75px;
-      }
-      .brand p {
-        font-size: 1rem;
-      }
-      .brand {
-        padding: 20px;
-      }
+    .brand img { 
+      width: 65px; 
+      height: 65px; 
+      } 
+    .brand p { 
+      font-size: 0.9rem; 
+      } 
+    .brand { 
+      padding: 12px; 
+      } 
       .row { 
-        gap: 10px; }
-      
+  gap: 10px; 
+      }
     }
   </style>
 </head>
@@ -254,6 +250,7 @@
   </script>
 </body>
 </html>
+
 
 
 
