--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       <p>Shopsy</p>
     </a>
   </div>
-
+  
   <!-- Third Row -->
   <div class="row">
     <a class="brand" href="https://www.croma.com" target="_blank" rel="noopener noreferrer">
@@ -175,6 +175,22 @@
     <a class="brand" href="https://www.reliancedigital.in" target="_blank" rel="noopener noreferrer">
       <img src="https://i.pinimg.com/1200x/39/c1/99/39c199e243173ff0a2daf8f9dc2c89b6.jpg" alt="Reliance Digital" />
       <p>Reliance</p>
+    </a>
+    <a class="brand" href="https://www.meesho.com" target="_blank" rel="noopener noreferrer">
+      <img src="https://i.pinimg.com/736x/73/4b/75/734b753bf391e8069a36ff185670e2c6.jpg" alt="Boat" />
+      <p>Boat</p>
+    </a>
+    </div>
+  <!-- Fourth Row -->
+
+  <div class="row">
+    <a class="brand" href="https://www.ajio.com" target="_blank" rel="noopener noreferrer">
+      <img src="https://i.pinimg.com/736x/df/b0/d9/dfb0d95efaa0be188f2fc6bc3b609c55.jpg" alt="Noise" />
+      <p>Noise</p>
+    </a>
+    <a class="brand" href="https://www.shopsy.in" target="_blank" rel="noopener noreferrer">
+      <img src="https://play-lh.googleusercontent.com/uGrNBxGla5F9jv0VDAwGZUleaH3C54eaIDY5MaSiChKxseMIvPxlQ7ivm0OEzo9lxxw=w240-h480-rw" alt="Foxtale" />
+      <p>Foxtale</p>
     </a>
     <div class="brand" onclick="othersClicked()">
       <img src="https://i.pinimg.com/736x/3d/1e/e9/3d1ee975e59ef6bfc50d86dbdb512c28.jpg" alt="Others" />
@@ -211,6 +227,7 @@
   </script>
 </body>
 </html>
+
 
 
 
