--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <title>Shop Hub</title>
+  <title>Campus Buys</title>
 
   <!-- PWA manifest + theme color -->
   <link rel="manifest" href="manifest.json">
@@ -240,3 +240,4 @@
   </script>
 </body>
 </html>
+
