--- a/products.html
+++ b/products.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image" href="EK.png">
+    <link rel="icon" type="image" href="CB.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campus Buys</title>
@@ -54,6 +54,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
