--- a/products.html
+++ b/products.html
@@ -11,7 +11,7 @@
 
     <!-- Logo + Title -->
     <header id="site-header">
-        <img src="NEXTGEN DEALS.png" alt="Logo" class="logo" style="border-radius: 10px;">
+        <img src="CB.png" alt="Logo" class="logo" style="border-radius: 10px;">
         <h1>Campus Buys</h1>
     </header>
 
@@ -54,6 +54,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
