--- a/products.html
+++ b/products.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image" href="CB.jpeg">
+    <link rel="icon" type="image" href="CB.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campus Buys</title>
@@ -11,7 +11,7 @@
 
     <!-- Logo + Title -->
     <header id="site-header">
-        <img src="CB.jpeg" alt="Logo" class="logo" style="border-radius: 10px;">
+        <img src="CB.jpg" alt="Logo" class="logo" style="border-radius: 10px;">
         <h1>Campus Buys</h1>
     </header>
 
@@ -54,6 +54,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
