--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="image" href="CB.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Campus Buys</title>
 
@@ -240,4 +241,5 @@
   </script>
 </body>
 </html>
+
 
