--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <!-- PWA manifest + theme color -->
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#0f0f1a" />
- <link rel="icon" type="image" href="CB.jpg">
+   <link rel="icon" type="image/png" href="icon-192x192.png">
+    <!-- Main Logo / Favicon -->
+  <link rel="icon" type="image/jpeg" href="CB.jpg">
+  <link rel="apple-touch-icon" href="CB.jpg">
+  <link rel="shortcut icon" href="CB.jpg">
 
   <style>
     body {
@@ -240,6 +244,7 @@
   </script>
 </body>
 </html>
+
 
 
 
