--- a/menu.html
+++ b/menu.html
@@ -159,7 +159,7 @@
 </nav>
 
 <script>
-  const instagramUsername = "yourInstagramUsername";  // Replace with your Instagram username
+  const instagramUsername = "manikanta_____11";  // Replace with your Instagram username
 
   const contactMenu = document.getElementById('contact-menu');
   const aboutMenu = document.getElementById('about-menu');
@@ -183,3 +183,4 @@
 
 </body>
 </html>
+
