--- a/index.html
+++ b/index.html
@@ -145,15 +145,15 @@
 
   <!-- First Row -->
   <div class="row">
-    <a class="brand" href="https://amzn.to/your-affiliate" target="_blank" rel="noopener noreferrer">
+    <a class="brand" href="https://amzn.to/4qevPWh" target="_blank" rel="noopener noreferrer">
       <img src="https://i.pinimg.com/1200x/0a/3e/48/0a3e4885efe5567709c6fcb84f60efd9.jpg" alt="Amazon" />
       <p>Amazon</p>
     </a>
-    <a class="brand" href="https://www.flipkart.com" target="_blank" rel="noopener noreferrer">
+    <a class="brand" href="https://fkrt.co/vaS6pM/" target="_blank" rel="noopener noreferrer">
       <img src="https://i.pinimg.com/736x/22/27/26/222726afe9934f7861715a8087f344a0.jpg" alt="Flipkart" />
       <p>Flipkart</p>
     </a>
-    <a class="brand" href="https://www.myntra.com" target="_blank" rel="noopener noreferrer">
+    <a class="brand" href="https://myntr.in/vGsEu6" target="_blank" rel="noopener noreferrer">
       <img src="https://i.pinimg.com/736x/75/7e/9f/757e9f8de60e9f3040f2dfbda529813e.jpg" alt="Myntra" />
       <p>Myntra</p>
     </a>
@@ -245,3 +245,4 @@
   </script>
 </body>
 </html>
+
