--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
   <!-- First Row -->
   <div class="row">
-    <a class="brand" href="https://amzn.to/4nfk9zC" target="_blank" rel="noopener noreferrer">
+    <a class="brand" href="https://amzn.to/47jXa0m" target="_blank" rel="noopener noreferrer">
       <img src="https://i.pinimg.com/1200x/0a/3e/48/0a3e4885efe5567709c6fcb84f60efd9.jpg" alt="Amazon" />
       <p>Amazon</p>
     </a>
@@ -245,6 +245,7 @@
   </script>
 </body>
 </html>
+
 
 
 
