--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
       <img src="https://i.pinimg.com/1200x/0a/3e/48/0a3e4885efe5567709c6fcb84f60efd9.jpg" alt="Amazon" />
       <p>Amazon</p>
     </a>
+    <div class="store"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRf4KqUN3HJ9Ye15yF6ewn8uUnW0ZGA3lZgmuEX2z5bjYcvtUOSkuze5xHIczgdGOkICmw&usqp=CAU"><span>Amazon</span><button onclick="window.open('https://amzn.to/4nLAEnI')">Buy Now</button></div>
     <a class="brand" href="https://fkrt.co/vaS6pM/" target="_blank" rel="noopener noreferrer">
       <img src="https://i.pinimg.com/736x/22/27/26/222726afe9934f7861715a8087f344a0.jpg" alt="Flipkart" />
       <p>Flipkart</p>
@@ -245,6 +246,7 @@
   </script>
 </body>
 </html>
+
 
 
 
